feat: add workspace management
